--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 <html class="no-js" lang="nb">
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <h1>Three trails one cup</h1>
-  <p>One cup to rule them all!</p>
+    <h1>Three trails one cup</h1>
+    <p>One cup to rule them all!</p>
 
-  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-  <script src="js/main.js"></script>
+    <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+    <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163405044-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-163405044-1');
+    </script>
+        
 </body>
 
 </html>
