--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <h1>Three trails one cup</h1>
-    <p>One cup to rule them all!</p>
+    <header class="header">
+        <img class="header__logo" src="img/skyblazers.v2.negative.png" alt="sky blazers logo" />
+        <h1 class="header__title">Blaze Cup 2020</h1>
+        <p class="header__slogan">- Et løp på dine premisser i Lillomarka</p>
+        <nav class="header__nav">
+            <ul>
+                <li><a href="#regler">Regler</a></li>
+                <li><a href="#loypene">Løypene</a></li>
+                <li><a href="#registrer">Registrer dine løpeturer</a></li>
+            </ul>
+        </nav>
+    </header>
+
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script src="js/main.js"></script>
