--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lillo BlazeCup 2020</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/0db3e9be6e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
@@ -25,6 +26,7 @@
                 </ul>
             </nav>
         </header>
+
         <section class="rules" id="rules">
             <div class="wrap">
                 <h1>Slik funker det</h1>
@@ -32,13 +34,90 @@
                 <div class="segments" id="segments">
                     <ul class="segments__list">
                         <li class="segments__item">
-                            <iframe height='350' width='230' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/segments/16455185/embed'></iframe>
+                            <a href="https://www.strava.com/segments/16455185" target="_blank">
+                                <h3>1: Stirsdag Classic
+                                    <span class="link-icon">
+                                        <i class="fab fa-strava"></i>
+                                    </span>
+                                </h3>
+                                <img src="img/stirsdag-map.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
+                            </a>
+
+                            <div class="segment-stats">
+                                <table style="width:100%">
+                                    <tr>
+                                        <th>Distanse:</th>
+                                        <td>11.93km</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Stigning:</th>
+                                        <td>476m</td>
+                                    </tr>
+
+                                    <tr>
+                                        <th><abbr title="Fastest Known Time">FKT</abbr></th>
+                                        <td><a href="https://www.strava.com/activities/3294621415/segments/2684508241454152673">47:37</a></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>
                         </li>
                         <li class="segments__item">
-                            <iframe height='350' width='230' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/segments/18649264/embed'></iframe>
+                            <a href="https://www.strava.com/segments/18649264" target="_blank">
+                                <h3>2: Lilo Trail
+                                    <span class="link-icon">
+                                        <i class="fab fa-strava"></i>
+                                    </span>
+                                </h3>
+                                <img src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
+                            </a>
+
+                            <div class="segment-stats">
+                                <table style="width:100%">
+                                    <tr>
+                                        <th>Distanse:</th>
+                                        <td>20.48km</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Stigning:</th>
+                                        <td>910m</td>
+                                    </tr>
+                                    <tr>
+                                        <th><abbr title="Fastest Known Time">FKT</abbr></th>
+                                        <td><a href="https://www.strava.com/activities/1796036183">1:49:00</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>
                         </li>
                         <li class="segments__item">
-                            <iframe height='350' width='230' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/segments/23461915/embed'></iframe>
+                            <a href="https://www.strava.com/segments/16455185" target="_blank">
+                                <h3>3: Lillomarka Rundt
+                                    <span class="link-icon">
+                                        <i class="fab fa-strava"></i>
+                                    </span>
+                                </h3>
+                                <img src="img/lillomarka_rundt.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
+                            </a>
+
+                            <div class="segment-stats">
+                                <table style="width:100%">
+                                    <tr>
+                                        <th>Distanse:</th>
+                                        <td>45.91km</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Stigning:</th>
+                                        <td>1742m</td>
+                                    </tr>
+
+                                    <tr>
+                                        <th><abbr title="Fastest Known Time">FKT</abbr></th>
+                                        <td><a href="https://www.strava.com/activities/2800084862/overview">4:53:14</a></td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>
                         </li>
                     </ul>
                 </div>
