--- a/index.html
+++ b/index.html
@@ -18,13 +18,7 @@
             <img class="header__logo" src="img/skyblazers.v2.negative.png" alt="sky blazers logo" />
             <h1 class="header__title">Blaze Cup 2020</h1>
             <p class="header__slogan">Hvem er kongen og dronningen av Lillomarka?</p>
-            <nav class="header__nav">
-                <ul>
-                    <li><a href="#regler">Regler</a></li>
-                    <li><a href="#loypene">Løypene</a></li>
-                    <li><a href="#registrer">Registrer dine løpeturer</a></li>
-                </ul>
-            </nav>
+            <a class="teaser-arrow" href="#rules"><i class="fas fa-angle-double-down"></i></a>
         </header>
 
         <section class="rules" id="rules">
