--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/0db3e9be6e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -36,7 +35,6 @@
                                 </h3>
                                 <img src="img/stirsdag-map.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
                             </a>
-
                             <div class="segment-stats">
                                 <table style="width:100%">
                                     <tr>
@@ -116,10 +114,12 @@
                     </ul>
                 </div>
                 <article>
+                    <h2>Hva kan du vinne?</h2>
                     <p>Alle som har fullført cupen vil få muligheten til å skryte til kjente og 
                         ukjente på diverse sosiale medier. 
                         I tillegg kan det jo hende det dukker opp en premie eller to. </p>
 
+                    <h2>Hvordan kalkuleres det?</h2>
                     <p>Prestasjonen din på hvert segment kalkuleres relativt til de andre segmentene. 
                         Det vil si at om du løper raskt på Skyblazers Stirsdag Classic, 
                         så teller det like mye som en god tid på Lillomarka Rundt. 
@@ -130,6 +130,7 @@
                         på segmentet i tidsrommet mellom 1. mai og 31. juli og deler på antall 
                         Stirsdager segmentet er verdt.</p>
 
+                    <h2>Forholdsregler / disclaimer</h2>
                     <p>Vi oppfordrer alle til å løpe alene, holde avstand til andre på stien, nyte naturen og løpe akkurat så fort som passer deg. Måtte den beste kongen og dronningen av Lillomarka seire! Kjør hardt!</p>
                     
                     <p>- Sky Blazers -</p>
