--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/0db3e9be6e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -22,8 +23,10 @@
 
         <section class="rules" id="rules">
             <div class="wrap">
-                <h1>Slik funker det</h1>
-                <p>Lillo BlazeCup 2020© er en virtuell stiløpecup i Lillomarka. For å delta må du løpe tre Strava-segmenter mellom 01. mai og 31. juli:</p>
+                <header>
+                    <h1>Slik funker det</h1>
+                    <p>Lillo BlazeCup 2020© er en virtuell stiløpecup i Lillomarka. For å delta må du løpe tre Strava-segmenter mellom 01. mai og 31. juli:</p>
+                </header>
                 <div class="segments" id="segments">
                     <ul class="segments__list">
                         <li class="segments__item">
