--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Lillo BlazeCup 2020</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="img/header.jpg">
+    <meta property="og:url" content="https://blazecup.no/">
     <script src="https://kit.fontawesome.com/0db3e9be6e.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
@@ -141,7 +143,12 @@
                 </article>
             </div>
         </section>
-        
+        <section id="scoreboard">
+            <header>
+                <h1>Scoreboard</h1>
+
+            </header>
+        </section>
     </main>
 
 
