--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="rules" id="rules">
             <div class="wrap">
                 <header>
-                    <h1>Konseptet</h1>
+                    <h1>3 ruter 1 cup</h1>
                     <p>Lillo BlazeCup 2020© er en virtuell stiløpecup i Lillomarka. For å delta må du løpe tre Strava-segmenter mellom 01. mai og 31. juli</p>
                 </header>
                 <div class="segments" id="segments">
