arceryx logo added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             <img class="header__logo" src="img/skyblazers.v2.negative.simplified.png" alt="sky blazers logo" />
             <h1 class="header__title">Lillo BlazeCup 2020</h1>
             <p class="header__slogan">Hvem er kongen og dronningen av Lillomarka?</p>
+
+            <div class="header__spons">
+                <p class="header__spons__title">I samarbeid med</p>
+                <a class="header__spons__item" href="https://stores.arcteryx.com/shop/oslo">
+                    <img class="header__spons__logo" src="img/arcteryx_oslo_logo.png" alt="Arcteryx Oslo Logo" />
+                </a>
+            </div>
+
         </header>
 
         <section class="rules" id="rules">
