--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     </tr>
                                 </table>
                             </div>
-                            <a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>
+                            <!--<a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>-->
                         </li>
                         <li class="segments__item">
                             <a href="https://www.strava.com/segments/18649264" target="_blank">
@@ -93,7 +93,7 @@
                                     </tr>
                                 </table>
                             </div>
-                            <a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>
+                            <!--<a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>-->
                         </li>
                         <li class="segments__item">
                             <a href="https://www.strava.com/segments/16455185" target="_blank">
@@ -122,7 +122,7 @@
                                     </tr>
                                 </table>
                             </div>
-                            <a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>
+                            <!--<a href="https://forms.gle/ceaEzggdJgMLKL5t8" class="submit-btn">Send inn din innsats</a>-->
                         </li>
                     </ul>
                 </div>
