--- a/index2.html
+++ b/index2.html
@@ -69,75 +69,82 @@
         </section>
 
         <section id="ruter" class="site-section segments">
-            <header>
-                <h1>3 ruter 1 cup</h1>
-                <p>For å delta må du løpe tre Strava-segmenter mellom 01. mai og 31. juli</p>
+            <header class="site-section__header">
+                <h1 class="site-section__header__title">3 ruter 1 cup</h1>
+                <p class="site-section__header__subtitle">For å delta må du løpe tre Strava-segmenter mellom 01. mai og 31. juli</p>
             </header>
 
             <div class="segments">
                 <div class="segments__segment">
-                    <h3 id="stirsdag-classic">1. Stirsdag Classic</h3>
-                    <a class="segment__link" href="https://www.strava.com/segments/16455185" target="_blank">
-                        <img class="segment__link__img" src="img/stirsdag-map.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
-                        <p class="segment__link__text">Stirsdag Classic på Strava</p>
-                    </a>
-                    <div class="segment__stats">
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title">Distanse</h4>
-                            <p class="segment__stats__item__stat vr-type-2">11,93 km</hp>
-                        </div>
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title">Stigning</h4>
-                            <p class="segment__stats__item__stat vr-type-2">476 m</hp>
-                        </div>
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title"><abbr title="Fastest Known Time">FKT</abbr></h4>
-                            <a class="segment__stats__item__stat vr-type-2" href="https://www.strava.com/activities/3294621415/segments/2684508241454152673">47'37"</a>
-                        </div>
+                    <h3 class="segment__title" id="stirsdag-classic">1. Stirsdag Classic</h3>
+                        <div class="segments__segment__inner">
+                            <a class="segment__link" href="https://www.strava.com/segments/16455185" target="_blank">
+                                <img class="segment__link__img" src="img/stirsdag.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
+                                <span class="segment__link__text">Stirsdag Classic på Strava</span>
+                            </a>
+                            <div class="segment__stats">
+                                <div class="segment__stats__item">
+                                    <h4 class="segment__stats__item__title">Distanse</h4>
+                                    <p class="segment__stats__item__stat vr-type-2 mono-type">11,93 km</hp>
+                                </div>
+                                <div class="segment__stats__item">
+                                    <h4 class="segment__stats__item__title">Stigning</h4>
+                                    <p class="segment__stats__item__stat vr-type-2 mono-type">476 m</hp>
+                                </div>
+                                <div class="segment__stats__item">
+                                    <h4 class="segment__stats__item__title"><abbr title="Fastest Known Time">FKT</abbr></h4>
+                                    <a class="segment__stats__item__stat vr-type-2 mono-type" href="https://www.strava.com/activities/3294621415/segments/2684508241454152673">47'37"</a>
+                                </div>
+                            </div>
+                        </div> 
                     </div>
                 </div>
 
                 <div class="segments__segment">
-                    <h3 id="stirsdag-classic">2. Lillo Trail</h3>
-                    <a class="segment__link" href="https://www.strava.com/segments/16455185" target="_blank">
-                        <img class="segment__link__img" src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Lillo Trail-segmentet">
-                        <span class="segment__link__text">Lillo Trail på Strava</span>
-                    </a>
-                    <div class="segment__stats">
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title">Distanse</h4>
-                            <p class="segment__stats__item__stat vr-type-2">20,48 km</p>
-                        </div>
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title">Stigning</h4>
-                            <p class="segment__stats__item__stat vr-type-2">910 m</p>
-                        </div>
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title"><abbr title="Fastest Known Time">FKT</abbr></h4>
-                            <a class="segment__stats__item__stat vr-type-2" href="https://www.strava.com/activities/1796036183">1:49'00"</a>
+                    <h3 class="segment__title" id="lillo-trail">2. Lillo Trail</h3>
+                    <div class="segments__segment__inner">
+                        <a class="segment__link" href="https://www.strava.com/segments/16455185" target="_blank">
+                            <img class="segment__link__img" src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Lillo Trail-segmentet">
+                            <span class="segment__link__text">Lillo Trail på Strava</span>
+                        </a>
+                        <div class="segment__stats">
+                            <div class="segment__stats__item">
+                                <h4 class="segment__stats__item__title">Distanse</h4>
+                                <p class="segment__stats__item__stat vr-type-2 mono-type">20,48 km</p>
+                            </div>
+                            <div class="segment__stats__item">
+                                <h4 class="segment__stats__item__title">Stigning</h4>
+                                <p class="segment__stats__item__stat vr-type-2 mono-type">910 m</p>
+                            </div>
+                            <div class="segment__stats__item">
+                                <h4 class="segment__stats__item__title"><abbr title="Fastest Known Time">FKT</abbr></h4>
+                                <a class="segment__stats__item__stat vr-type-2 mono-type" href="https://www.strava.com/activities/1796036183">1:49'00"</a>
+                            </div>
                         </div>
                     </div>
                 </div>
 
 
                 <div class="segments__segment">
-                    <h3 id="stirsdag-classic">3. Lillomarka Rundt</h3>
-                    <a class="segment__link" href="https://www.strava.com/segments/16455185" target="_blank">
-                        <img class="segment__link__img" src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Lillomarka Rundt">
-                        <span class="segment__link__text">Lillomarka Rundt på Strava</span>
-                    </a>
-                    <div class="segment__stats">
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title">Distanse</h4>
-                            <p class="segment__stats__item__stat vr-type-2">45,91 km</p>
-                        </div>
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title">Stigning</h4>
-                            <p class="segment__stats__item__stat vr-type-2">1 742 m</p>
-                        </div>
-                        <div class="segment__stats__item">
-                            <h4 class="segment__stats__item__title"><abbr title="Fastest Known Time">FKT</abbr></h4>
-                            <a class="segment__stats__item__stat vr-type-2" href="https://www.strava.com/activities/2800084862/overview">4:53'14"</a>
+                    <h3 class="segment__title" id="stirsdag-classic">3. Lillomarka Rundt</h3>
+                    <div class="segments__segment__inner">
+                        <a class="segment__link" href="https://www.strava.com/segments/16455185" target="_blank">
+                            <img class="segment__link__img" src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Lillomarka Rundt">
+                            <span class="segment__link__text">Lillomarka Rundt på Strava</span>
+                        </a>
+                        <div class="segment__stats">
+                            <div class="segment__stats__item">
+                                <h4 class="segment__stats__item__title">Distanse</h4>
+                                <p class="segment__stats__item__stat vr-type-2 mono-type">45,91 km</p>
+                            </div>
+                            <div class="segment__stats__item">
+                                <h4 class="segment__stats__item__title">Stigning</h4>
+                                <p class="segment__stats__item__stat vr-type-2 mono-type">1 742 m</p>
+                            </div>
+                            <div class="segment__stats__item">
+                                <h4 class="segment__stats__item__title"><abbr title="Fastest Known Time">FKT</abbr></h4>
+                                <a class="segment__stats__item__stat vr-type-2 mono-type" href="https://www.strava.com/activities/2800084862/overview">4:53'14"</a>
+                            </div>
                         </div>
                     </div>
                 </div>
