--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,6 @@
                             </a>
                         </div>
                     </div>
-
                 </div>
 
                 <nav class="header__nav" id="nav">
@@ -120,7 +119,7 @@
                     <h3 class="segment__title" id="lillomarka-rundt">3. Lillomarka Rundt</h3>
                     <div class="segments__segment__inner">
                         <a class="segment__link" href="https://www.strava.com/segments/16455185" target="_blank">
-                            <img class="segment__link__img" src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Lillomarka Rundt">
+                            <img class="segment__link__img" src="img/lillomarka_rundt.jpg" alt="Bilde av gps-sporene til Lillomarka Rundt">
                             <span class="segment__link__text">Lillomarka Rundt på Strava</span>
                         </a>
                         <div class="segment__stats">
