--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="ruter" data-anchor="ruter" class="site-section segments">
             <header class="site-section__header">
                 <h1 class="site-section__header__title">3 ruter 1 cup</h1>
-                <p class="site-section__header__subtitle">For å delta må du løpe tre Strava-segmenter mellom 01. mai og 31. juli</p>
+                <p class="site-section__header__subtitle">For å delta må du løpe tre Strava-segmenter mellom 01. mai og 31. juli:</p>
             </header>
 
             <div class="segments">
