facebook teaser images

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LilloBlazeCup2020 - 3 stier 1 cup</title>
+    <title>Lillo BlazeCup 2020 | 3 stier 1 cup</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="img/header.jpg">
+    <meta property="og:image" content="img/fb-teaser.jpg">
     <meta property="og:url" content="https://blazecup.no/">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
