--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <h1 class="header__logo">
                 <span class="header__title sr-only">Lillo Blaze Cup 2020</span>
-                <img class="header__logo__img" src="img/lillo_blazecup.png" alt="Lillo BlazeCup Logo">
+                <img class="header__logo__img" src="/img/lillo_blazecup.png" alt="Lillo BlazeCup Logo">
             </h1>
 
             <div class="header__inner">
