--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Lillo BlazeCup 2020 | 3 stier 1 cup</title>
-    <meta name="description" content="">
+    <meta name="description" content="En virtuell stiløpecup i Lillomarka 1. mai til 31. juli i regi av Sky Blazers">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="img/fb-teaser.jpg">
     <meta property="og:url" content="https://blazecup.no/">
