--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <h1 class="header__logo">
                 <span class="header__title sr-only">Lillo Blaze Cup 2020</span>
-                <img class="header__logo__img" src="/img/lillo_blazecup.png" alt="Lillo BlazeCup Logo">
+                <img class="header__logo__img" src="img/lillo_blazecup.png" alt="Lillo BlazeCup Logo">
             </h1>
 
             <div class="header__inner">
@@ -40,6 +40,15 @@
                 </div>
 
                 <nav class="header__nav" id="nav">
+                    <button tabindex="-1" id="nav-burger">
+                        <span class="burger-lines">
+                            <span class="burger-line-1"></span>
+                            <span class="burger-line-2"></span>
+                            <span class="burger-line-3"></span>
+                        </span>
+                        <span class="burger-text">Meny</span>
+                    </button>
+
                     <ul class="header__nav__list" >
                         <li class="header__nav__item">
                             <a tabindex="1" class="header__nav__link" href="#ruter" data-scroll="ruter">Ruter</a>
