--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <h3 class="header__sponsor__title">Med hjelp fra</h3>
                         
                         <div class="header__sponsor__item">
-                            <a tabindex="3" href="https://stores.arcteryx.com/shop/oslo">
+                            <a tabindex="3" href="https://arcteryx.com/no/no/">
                                 <img src="img/arcteryx_oslo_logo.png" alt="Arc'teryx Oslo Logo">
                             </a>
                         </div>
