--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                         <li class="header__nav__item">
                             <a tabindex="2" class="header__nav__link" href="#regler" data-scroll="regler">Regler</a>
                         </li>
+                        <li class="header__nav__item">
+                            <a tabindex="3" class="header__nav__link" href="#premier" data-scroll="regler">Premier</a>
+                        </li>
                     </ul>
 
                 </nav>
@@ -77,10 +80,12 @@
                 <div class="segments__segment">
                     <h3 class="segment__title" id="stirsdag-classic">1. Stirsdag Classic</h3>
                         <div class="segments__segment__inner">
-                            <a class="segment__link" href="https://www.strava.com/segments/16455185" target="_blank">
-                                <img class="segment__link__img" src="img/stirsdag.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
-                                <span class="segment__link__text">Stirsdag Classic på Strava</span>
-                            </a>
+                            <div class="segment__resources">
+                                <img src="img/stirsdag.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
+                                <a href="https://www.strava.com/segments/23461915" target="_blank">Stirsdag Classic på Strava</a>
+                                <a href="downloads/Stirsdag.gpx.zip" download="Stirsdag.gpx.zip">Last ned .gpx (25kB)</a>
+                            </div>
+
                             <div class="segment__stats">
                                 <div class="segment__stats__item">
                                     <h4 class="segment__stats__item__title">Distanse</h4>
@@ -102,10 +107,13 @@
                 <div class="segments__segment">
                     <h3 class="segment__title" id="lilotrail">2. Lilo Trail</h3>
                     <div class="segments__segment__inner">
-                        <a class="segment__link" href="https://www.strava.com/segments/18649264" target="_blank">
-                            <img class="segment__link__img" src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Lillo Trail-segmentet">
-                            <span class="segment__link__text">Lilo Trail på Strava</span>
-                        </a>
+                        
+                        <div class="segment__resources">
+                            <img src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Lillo Trail-segmentet">
+                            <a href="https://www.strava.com/segments/18649264" target="_blank">Lilo Trail på Strava</a>
+                            <a href="downloads/lilotrail.gpx.zip" download="lilotrail.gpx.zip">Last ned .gpx (110kB)</a>
+                        </div>
+
                         <div class="segment__stats">
                             <div class="segment__stats__item">
                                 <h4 class="segment__stats__item__title">Distanse</h4>
@@ -127,10 +135,12 @@
                 <div class="segments__segment">
                     <h3 class="segment__title" id="lillomarka-rundt">3. Lillomarka Rundt</h3>
                     <div class="segments__segment__inner">
-                        <a class="segment__link" href="https://www.strava.com/segments/23461915" target="_blank">
-                            <img class="segment__link__img" src="img/lillomarka_rundt.jpg" alt="Bilde av gps-sporene til Lillomarka Rundt">
-                            <span class="segment__link__text">Lillomarka Rundt på Strava</span>
-                        </a>
+                        <div class="segment__resources">
+                            <img src="img/lillomarka_rundt.jpg" alt="Bilde av gps-sporene til Lillomarka Rundt">
+                            <a href="https://www.strava.com/segments/23461915" target="_blank">Lillomarka Rundt på Strava</a>
+                            <a href="downloads/Lillomarka_Rundt.gpx.zip" download="Lillomarka_Rundt.gpx.zip">Last ned .gpx (319kB)</a>
+                        </div>
+
                         <div class="segment__stats">
                             <div class="segment__stats__item">
                                 <h4 class="segment__stats__item__title">Distanse</h4>
