tok bort premier link

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                         <li class="header__nav__item">
                             <a tabindex="2" class="header__nav__link" href="#regler" data-scroll="regler">Regler</a>
                         </li>
-                        <li class="header__nav__item">
+                        <!--<li class="header__nav__item">
                             <a tabindex="3" class="header__nav__link" href="#premier" data-scroll="regler">Premier</a>
-                        </li>
+                        </li>-->
                     </ul>
 
                 </nav>
