language and text changes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <a tabindex="3" class="header__nav__link" href="#premier" data-scroll="regler">Premier</a>
                         </li>-->
                         <li class="header__nav__item">
-                            <a tabindex="4" class="header__nav__link" href="#ledertabeller" data-scroll="ledertabeller">Ledertabeller</a>
+                            <a tabindex="4" class="header__nav__link" href="#scoreboard" data-scroll="ledertabeller">Scoreboard</a>
                         </li>
                     </ul>
 
@@ -202,18 +202,18 @@
             </article>
 
         </section>
-        <section id="ledertabeller" data-anchor="ledertabeller" class="site-section leaderboards">
+        <section id="scoreboard" data-anchor="scoreboard" class="site-section leaderboards">
             <header class="site-section__header">
-                <h1 class="site-section__header__title">Leder&shy;tabeller</h1>
+                <h1 class="site-section__header__title">Scoreboard</h1>
             </header>
-            <p class="leaderboards__ingress">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p class="leaderboards__ingress">Under ser du en oversikt over de raskeste løperne i Lillo BlazeCup2020. Denne lista blir manuelt oppdatert, så dersom du ikke ser navnet ditt umiddelbart etter at du har løpt inn til en vinnertid må du smøre det inn med noen minutters tålmodighet. </p>
             <h3>Blaze Cup Overall</h3>
             <table class="leaderboards__table">
               <thead>
                 <tr>
                   <th>#</th>
                   <th>Navn</th>
-                  <th>Poenger</th>
+                  <th>Poeng</th>
                 </tr>
               </thead>
               <tbody>
@@ -235,7 +235,7 @@
                 <tr>
                   <th>#</th>
                   <th>Navn</th>
-                  <th>Poenger</th>
+                  <th>Poeng</th>
                 </tr>
               </thead>
               <tbody>
@@ -257,7 +257,7 @@
                 <tr>
                   <th>#</th>
                   <th>Navn</th>
-                  <th>Poenger</th>
+                  <th>Poeng</th>
                 </tr>
               </thead>
               <tbody>
