added submit button

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                                 <img src="img/stirsdag.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
                                 <a href="https://www.strava.com/segments/16455185" target="_blank">Stirsdag Classic på Strava</a>
                                 <a href="downloads/Stirsdag.gpx.zip" download="Stirsdag.gpx.zip">Last ned .gpx (25kB)</a>
+                                <a href="https://forms.gle/AcD1uQW7j7CYMqzG8" target="_blank">Meld inn din innsats</a>
                             </div>
 
                             <div class="segment__stats">
@@ -112,6 +113,7 @@
                             <img src="img/lilotrail.jpg" alt="Bilde av gps-sporene til Lillo Trail-segmentet">
                             <a href="https://www.strava.com/segments/18649264" target="_blank">Lilo Trail på Strava</a>
                             <a href="downloads/lilotrail.gpx.zip" download="lilotrail.gpx.zip">Last ned .gpx (110kB)</a>
+                            <a href="https://forms.gle/AcD1uQW7j7CYMqzG8" target="_blank">Meld inn din innsats</a>
                         </div>
 
                         <div class="segment__stats">
@@ -139,6 +141,7 @@
                             <img src="img/lillomarka_rundt.jpg" alt="Bilde av gps-sporene til Lillomarka Rundt">
                             <a href="https://www.strava.com/segments/23461915" target="_blank">Lillomarka Rundt på Strava</a>
                             <a href="downloads/Lillomarka_Rundt.gpx.zip" download="Lillomarka_Rundt.gpx.zip">Last ned .gpx (319kB)</a>
+                            <a href="https://forms.gle/AcD1uQW7j7CYMqzG8" target="_blank">Meld inn din innsats</a>
                         </div>
 
                         <div class="segment__stats">
